[gd_scene load_steps=4 format=3 uid="uid://dshlk5gudostl"]

[ext_resource type="Script" uid="uid://cwx1rh1h1q4u5" path="res://scenes/ui/card_reward.gd" id="1_8kjk5"]
[ext_resource type="Resource" uid="uid://c7vptttl1jh8t" path="res://cards/ideation.tres" id="2_05lw7"]
[ext_resource type="PackedScene" uid="uid://gp5v1kbe3lnj" path="res://scenes/ui/card_visuals.tscn" id="3_w83eu"]

[node name="CardReward" type="CenterContainer"]
offset_right = 75.0
offset_bottom = 106.0
size_flags_horizontal = 3
script = ExtResource("1_8kjk5")
card_data = ExtResource("2_05lw7")

[node name="Visuals" parent="." instance=ExtResource("3_w83eu")]
layout_mode = 2

[connection signal="gui_input" from="Visuals" to="." method="_on_visuals_gui_input"]
[connection signal="mouse_entered" from="Visuals" to="." method="_on_visuals_mouse_entered"]
[connection signal="mouse_exited" from="Visuals" to="." method="_on_visuals_mouse_exited"]
